<resources>
    <string name="app_name">The Bestory</string>

    <!-- Navigation Drawer -->

    <string name="navdrawer_open">Open navigation</string>
    <string name="navdrawer_close">Close navigation</string>

    <!-- Navigation Drawer - Main Activity -->

    <string name="navdrawer_main_action_auth">Authorization</string>

    <string name="navdrawer_main_stories">All stories</string>
    <string name="navdrawer_main_topics">Topics</string>
    <string name="navdrawer_main_settings">Settings</string>
    <string name="navdrawer_main_about">About</string>
    <string name="navdrawer_main_send_feedback">Send feedback</string>
    <string name="navdrawer_main_debug">Debug</string>

    <!-- Main Activity - Submit Story Fragment -->

    <string name="main_stories_new_toolbar_title">Submit story</string>
    <string name="write_your_story_here">Write your story here!</string>
    <string name="main_stories_new_toolbar_action_cancel">Cancel</string>
    <string name="main_stories_new_toolbar_action_send">Send story</string>

    <!-- Main Activity - Stories Fragment - Toolbar -->

    <string name="main_stories_toolbar_action_new">New story</string>
    <string name="main_stories_toolbar_action_search">Search stories</string>

    <!-- Main Activity - Stories Fragment - Tabs -->

    <string name="main_stories_latest_tab">Latest</string>
    <string name="main_stories_hot_tab">Hot</string>
    <string name="main_stories_top_tab">Top</string>
    <string name="main_stories_random_tab">Random</string>

    <!-- Main Activity - TabFragment - Errors -->

    <string name="topics_not_found">Topics not found</string>
    <string name="stories_not_found">Stories not found</string>
    <string name="no_internet">Unable to load data.
        Please check your Internet connection and refresh the page.</string>
    <string name="error">Unexpected error. Close and open app again.</string>
    <string name="error_while_data_loading">Error while data loading</string>
    <string name="try_again">Try again</string>

    <!-- Main Activity - Settings Fragment -->

    <string name="main_settings_general_category">General</string>
    <string name="main_settings_devtools_category">Developer tools</string>

    <string name="main_settings_general_theme_title">Theme</string>
    <string-array name="main_settings_general_theme_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="main_settings_general_theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string name="main_settings_devtools_reset_cache_title">Reset cache</string>
    <string name="main_settings_devtools_reset_cache_summary">Clear stories cache</string>

    <string name="main_settings_devtools_debug_title">Debug page</string>

    <string name="main_about">Welcome to The Bestory! \nIt is the place where you can share your secret with others and don’t afraid to be judge. Place where people know each other and don’t know at the same moment. Place that you can call the book written by hundreds authors. Here you can relax, dream about future, reflect on life or make others do so with your personal story. The world around us is constantly changing and so are we. But one thing is for sure here you will find story that you will love.</string>

    <string name="main_about_authors_list">
        Developers:\n- Oktai Tatanov\n- Nariman Safiulin\n- Alex Anisimov\n
        \nModerators:\n- Alexander Afonin\n- Ivan Kudryavtsev\n
        \nArts:\n- Valeria Sigonina
    </string>

    <string name="main_about_credits">
        Credits:\n- Topic icons provided free by EmojiOne
    </string>
    <string name="navdrawer_main_bookmarks">Bookmarks</string>

</resources>
