<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/main_settings_general_category">

        <ListPreference
            android:defaultValue="light"
            android:entries="@array/main_settings_general_theme_titles"
            android:entryValues="@array/main_settings_general_theme_values"
            android:key="theme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/main_settings_general_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/main_settings_devtools_category">

        <Preference
            android:key="reset_cache"
            android:summary="@string/main_settings_devtools_reset_cache_summary"
            android:title="@string/main_settings_devtools_reset_cache_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="debug_page"
            android:title="@string/main_settings_devtools_debug_title" />

    </PreferenceCategory>

</PreferenceScreen>
